automatically backed up by learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,9 @@
 <h1>something</h1>
+<% @posts.each do |post| %>
+  <h3>Post Name: <%=post[:name] %></h3>
+  <p>Content: <%=post[:content] %></p>
+<% end %>
+
+
 <%=@post.name%>
-<%=@post.content%>
+<%=@post.content%> 
