--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,5 @@
-<h1>something</h1>
+<h1>Posts</h1>
+
 <% @posts.each do |post| %>
   <h3>Post Name: <%=post[:name] %></h3>
   <p>Content: <%=post[:content] %></p>
