--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -2,14 +2,7 @@
 
 <form method="post" action="/posts/<%= @post.id %>">
   <input id="hidden" type="hidden" name="_method" value="patch">
-
-  <p><label for="post_name">Post Name:</label></p>
-  <p><input type="text" id="post_name" name="name" value="<%= @post.name %>"></p>
-
-  <p><label for="post_content">Content:</label></p>
-  <textarea id="post_content" name="content" rows="10" cols="50">
-    <%= @post.content %>
-  </textarea>
-  <br>
-  <input type="submit" id="submit" value="Submit">
-</form>
+       <input type="text" name="name" value="<%=@post.name%>">
+       <input type="text" name="content" value="<%=@post.content%>">
+       <input type="submit" value="submit">
+     </form>
